# tol-revolve

./: .gitignore  CMakeLists.txt  README.md  TODO.md  circle.yml  debug_plot_extnn.dot  requirements.txt  run-experiments.sh  start.py
cmake/: CustomPath.cmake
cpp/: CMakeLists.txt  cpp.kdev4
cpp/.kdev4/: cpp.kdev4
cpp/tol/: RobotController.cpp  RobotController.h
cpp/tol/msgs/: insert_sdf.proto
cpp/tol/plugin/: Actuator.h  Body.cpp  Body.h  Evaluator.cpp  Evaluator.h  EvolutionKeys.cpp  EvolutionKeys.h  ExtendedNeuralNetwork.cpp  ExtendedNeuralNetwork.h  FakeBrain.cpp  FakeBrain.h  FakeLightSensor.cpp  FakeLightSensor.h  GenericLearnerBrain.cpp  GenericLearnerBrain.h  Helper.cpp  Helper.h  HyperNEAT_CPPN.cpp  HyperNEAT_CPPN.h  HyperNEAT_Splines.cpp  HyperNEAT_Splines.h  InteractiveEvolutionPlugin.cpp  InteractiveEvolutionPlugin.h  MLMPCPGBrain.h  NEAT_CPPN.cpp  NEAT_CPPN.h  RLPower.cpp  RLPower.h  RLPower_CPPN.cpp  RLPower_CPPN.h  RLPower_Splines.cpp  RLPower_Splines.h  RobotController.cpp  RobotController.h  SUPGBrain.cpp  SUPGBrain.h  SUPGBrainPhototaxis.cpp  SUPGBrainPhototaxis.h  Sensor.h  WorldController.cpp  (+39 more)
cpp/tol/plugin/brain/: Body.cpp  Body.h  BodyParser.cpp  BodyParser.h  Evaluator.cpp  FakeBrain.cpp  FakeBrain.h  GenericLearnerBrain.h  Helper.h  HyperNEAT_CPPN.cpp  HyperNEAT_CPPN.h  HyperNEAT_MlmpCPG.cpp  HyperNEAT_MlmpCPG.h  HyperNEAT_Splines.cpp  HyperNEAT_Splines.h  MLMPCPGBrain.cpp  MLMPCPGBrain.h  NEAT_CPPN.cpp  NEAT_CPPN.h  RLPower.h  RLPower_CPPN.cpp  RLPower_CPPN.h  RLPower_Splines.cpp  RLPower_Splines.h  SUPGBrain.cpp  SUPGBrain.h  SUPGBrainPhototaxis.cpp  SUPGBrainPhototaxis.h
cpp/tol/plugin/neat/: CMakeLists.txt  asyncneat.cpp  asyncneat.h  neat_ext_nn.cpp  neat_ext_nn.h  neatevaluation.cpp  neatevaluation.h
cpp/tol/plugin/neat/accneat/: CMakeLists.txt  Makefile
cpp/tol/plugin/neat/accneat/src/: genome.h  genomemanager.cpp  genomemanager.h  main.cpp  neat.cpp  neat.h  neattypes.h  organism.cpp  organism.h  population.cpp  population.h
cpp/tol/plugin/neat/accneat/src/experiments/: evaluatorexperiment.h  experiment.cpp  experiment.h
cpp/tol/plugin/neat/accneat/src/experiments/maze/: maze.cpp  mazeevaluator.cxx  mazeevaluator.h
cpp/tol/plugin/neat/accneat/src/experiments/static/: cfg.cpp  regex.cpp  sequence.cpp  staticevaluator.cxx  staticevaluator.h  staticexperiment.h  xor.cpp
cpp/tol/plugin/neat/accneat/src/innovgenome/: innovation.cpp  innovation.h  innovgenome.cpp  innovgenome.h  innovgenomemanager.cpp  innovgenomemanager.h  innovlinkgene.cpp  innovlinkgene.h  innovnodegene.cpp  innovnodegene.h  innovnodelookup.h  recurrencychecker.h  trait.cpp  trait.h
cpp/tol/plugin/neat/accneat/src/multiinnovgenome/: multiinnovgenome.cpp  multiinnovgenome.h
cpp/tol/plugin/neat/accneat/src/multinnspecies/: multinnspecies.cpp  multinnspecies.h  multinnspeciesorganism.cpp  multinnspeciesorganism.h  multinnspeciespopulation.cpp  multinnspeciespopulation.h
cpp/tol/plugin/neat/accneat/src/network/: network.h  networkexecutor.h
cpp/tol/plugin/neat/accneat/src/network/cpu/: cpunetwork.cpp  cpunetwork.h  cpunetworkexecutor.h
cpp/tol/plugin/neat/accneat/src/network/cuda/: cudanetwork.h  cudanetworkbatch.h  cudanetworkexecutor.h  cudanetworkkernel.h  cudautil.h
cpp/tol/plugin/neat/accneat/src/species/: species.cpp  species.h  speciesorganism.cpp  speciesorganism.h  speciespopulation.cpp  speciespopulation.h
cpp/tol/plugin/neat/accneat/src/util/: map.cpp  map.h  rng.cpp  rng.h  stats.h  timer.h  util.cpp  util.h
cpp/tol/plugin/neat/test/: testasyncneat.cpp  testasyncneat.h  testcustomgenomemanager.cpp  testcustomgenomemanager.h  testmultinnspeciesneat.cpp  testmultinnspeciesneat.h
cpp/tol/plugin/supg/: supggenomemanager.cpp  supggenomemanager.h  supgneuron.cpp  supgneuron.h
cpp/tol/plugin/test/: CMakeLists.txt  TestYAMLBodyParser.cpp  TestYAMLBodyParser.h  test_FakeLightSensor.cpp  test_SUPGBrain.cpp  test_SUPGBrain.h  test_SUPGBrainPhototaxis.cpp  test_YAMLBodyParser.cpp  test_YAMLBodyParser.h  testfakelightsensor.cpp  testfakelightsensor.h  testsupgbrain.cpp  testsupgbrainphototaxis.cpp  testsupgbrainphototaxis.h
docker/: Dockerfile  build-and-test.cmake  build.cmake  build_and_make_gazebo.sh  build_and_make_revolve.sh  build_and_make_sdformat.sh  build_and_make_tol-revolve.sh  test.cmake
docker/base_gazebo_image/: Dockerfile  build_and_make_gazebo.sh  build_and_make_revolve.sh  build_and_make_sdformat.sh  build_and_make_tol-revolve.sh  install_dependencies.sh
experiments/: offline_evolve.py  online_learn.py  single_robot_manager.py
experiments/offline-evolve/: offline_evolve.py  start.py  summarize.R
experiments/online-evolve/: benchmark2.py  param_search.py  poses.R  start.py  start_benchmark.py  start_benchmark2.py
output/restore/: poses.csv  robot_1.pb  robots.csv  settings.conf
res/: controller.policy  gecko7_best.policy  hyperneat_mlmpcpg.cfg  hyperneat_net.cfg  hyperneat_net_3_3_4.cfg1  hyperneat_net_3_3_4.cfg10  hyperneat_net_3_3_4.cfg2  hyperneat_net_3_3_4.cfg3  hyperneat_net_3_3_4.cfg4  hyperneat_net_3_3_4.cfg5  hyperneat_net_3_3_4.cfg6  hyperneat_net_3_3_4.cfg7  hyperneat_net_3_3_4.cfg8  hyperneat_net_3_3_4.cfg9  hyperneat_net_5_5.cfg  hyperneat_spline.cfg  known_innovations.yaml  rafhyperneat_net.cfg  rlpower.cfg  rlpower_net.cfg  rlpower_spline.cfg
res/1-gen/: robot_1-1.best  robot_1-1.innovations  robot_1-2.best  robot_1-2.innovations  robot_1-3.best  robot_1-3.innovations  robot_10-1.best  robot_10-2.best  (+112 more)
sample/: from_yaml.py
scripts/: all_meta.sh  ancestors.py  benchmark.py  bloodline.py  build_stats.py  demo.py  demo2.py  diversity.py  from_yaml.py  nemodemo.py  offline_evolve.py  plot_benchmark.R  quicktest.py  quicktest2.py  refresh_rate.py  robot_stats.py  slowdown.py  starfish.yaml  track_genes.py  trees.py  trigger_crash.py  whos_alive.py
tol/: constants.py
tools/: benchmark.world  compile_python  debugbenchmark  demo.world  demo_world.sdf  idemo.world  nemodemo  run-offline-evolve  run-viewer-world  runbenchmark  rundemo  rundemoworld  rungazebo.sh  summarize.R  testworld.sdf  viewer.world
(+280 files in other folders)
